按照标准工作流规范重构所有内置Skill